--- a/Connexion.html
+++ b/Connexion.html
@@ -15,12 +15,12 @@
 </head>
 <body>
 
-<img src="Pictures/Isep-Logo.jpg">
+<img src="Pictures/logo_ISEP.jpg">
 <br><br><br><br>
 <h1 class="title">Scientific Publication Manager</h1>
 <form name="myForm" action="Controller" method="post">
 
-    <fieldset><legend>Sign In</legend>
+    <fieldset class="signin"><legend>Sign In</legend>
     	<br><label>Pseudo :</label>
     	<input type="text" class="champ" placeholder="Pseudo" name="pseudo"><br>
     	<br><label>Password :</label>
