--- a/Index.html
+++ b/Index.html
@@ -35,12 +35,97 @@
           <input type="search" class="input-sm" placeholder="Search">
           <button type="submit" class="btn btn-primary btn-sm"><span class="glyphicon glyphicon-eye-open"></span> Search</button>
         </li>
-
-  </li>
-</ul>
+       </li>
+     </ul>
   </div>
-  <p>Dernières publications :</p>
+  
+  
+  <h2>Last publications :</h2>
+  
+  
+  <br><br><br>
+  <fieldset class="publication_fieldset">
+    <legend class="publication_legend">Published by Adrien the 13th January 2017 :</legend>
+    <div class="control-group">
+    	<br>
+        <p class="publication_div">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut rhoncus leo leo, vel sagittis orci suscipit sed. Nunc eu ante vel leo posuere pretium. Praesent vitae neque nec nisi luctus consequat a sit amet ex. Quisque bibendum purus eget porttitor malesuada. Sed dictum nisl et laoreet feugiat. Fusce aliquam bibendum felis. Vivamus laoreet faucibus neque. Nulla facilisi. Integer consectetur nibh a orci laoreet mollis. Nam tortor dui, sollicitudin eget ullamcorper non, ornare egestas erat. Donec orci arcu, porta eu lobortis et, sagittis ut lorem. Nam commodo blandit ornare. Morbi auctor auctor purus nec varius.
+		</p><br><p class="publication_div">
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In a urna vel turpis tempor dapibus et eu tortor. Sed lacinia, purus dictum imperdiet rhoncus, nisl sem ornare libero, pharetra molestie ante nunc a nulla. Nam ut luctus dolor. Praesent vitae consequat dui, a porta ligula. Donec ac orci vel metus dictum congue. Sed quis ante nec diam efficitur accumsan cursus vel nisi. Sed sit amet ex et sem venenatis porttitor ut sit amet turpis. Phasellus maximus est eu nulla dictum mattis. Morbi massa erat, sollicitudin commodo tortor nec, mollis commodo arcu. Integer ut erat ut leo sagittis euismod. Vivamus consectetur magna sed lacus sollicitudin volutpat. Integer ultricies, lorem eget pellentesque auctor, ligula metus molestie.
+        </p>
+        <br><br>
+        <a href="Pictures/Isep-Logo.jpg" download="logo" class="download">Download HTML file</a>
+        <a href="Pictures/Isep-Logo.jpg" download="logo" class="download">Download BibteX file</a>
+    </div>
+  </fieldset>
+  
+  
+  <br><br><br>
+  <fieldset class="publication_fieldset">
+    <legend class="publication_legend">Published by Adrien the 13th January 2017 :</legend>
+    <div class="control-group">
+    	<br>
+        <p class="publication_div">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut rhoncus leo leo, vel sagittis orci suscipit sed. Nunc eu ante vel leo posuere pretium. Praesent vitae neque nec nisi luctus consequat a sit amet ex. Quisque bibendum purus eget porttitor malesuada. Sed dictum nisl et laoreet feugiat. Fusce aliquam bibendum felis. Vivamus laoreet faucibus neque. Nulla facilisi. Integer consectetur nibh a orci laoreet mollis. Nam tortor dui, sollicitudin eget ullamcorper non, ornare egestas erat. Donec orci arcu, porta eu lobortis et, sagittis ut lorem. Nam commodo blandit ornare. Morbi auctor auctor purus nec varius.
+		</p><br><p class="publication_div">
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In a urna vel turpis tempor dapibus et eu tortor. Sed lacinia, purus dictum imperdiet rhoncus, nisl sem ornare libero, pharetra molestie ante nunc a nulla. Nam ut luctus dolor. Praesent vitae consequat dui, a porta ligula. Donec ac orci vel metus dictum congue. Sed quis ante nec diam efficitur accumsan cursus vel nisi. Sed sit amet ex et sem venenatis porttitor ut sit amet turpis. Phasellus maximus est eu nulla dictum mattis. Morbi massa erat, sollicitudin commodo tortor nec, mollis commodo arcu. Integer ut erat ut leo sagittis euismod. Vivamus consectetur magna sed lacus sollicitudin volutpat. Integer ultricies, lorem eget pellentesque auctor, ligula metus molestie.
+        </p>
+        <br><br>
+        <a href="Pictures/Isep-Logo.jpg" download="logo" class="download">Download HTML file</a>
+        <a href="Pictures/Isep-Logo.jpg" download="logo" class="download">Download BibteX file</a>
+    </div>
+  </fieldset>
+  
+  
+  <br><br><br>
+  <fieldset class="publication_fieldset">
+    <legend class="publication_legend">Published by Adrien the 13th January 2017 :</legend>
+    <div class="control-group">
+    	<br>
+        <p class="publication_div">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut rhoncus leo leo, vel sagittis orci suscipit sed. Nunc eu ante vel leo posuere pretium. Praesent vitae neque nec nisi luctus consequat a sit amet ex. Quisque bibendum purus eget porttitor malesuada. Sed dictum nisl et laoreet feugiat. Fusce aliquam bibendum felis. Vivamus laoreet faucibus neque. Nulla facilisi. Integer consectetur nibh a orci laoreet mollis. Nam tortor dui, sollicitudin eget ullamcorper non, ornare egestas erat. Donec orci arcu, porta eu lobortis et, sagittis ut lorem. Nam commodo blandit ornare. Morbi auctor auctor purus nec varius.
+		</p><br><p class="publication_div">
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In a urna vel turpis tempor dapibus et eu tortor. Sed lacinia, purus dictum imperdiet rhoncus, nisl sem ornare libero, pharetra molestie ante nunc a nulla. Nam ut luctus dolor. Praesent vitae consequat dui, a porta ligula. Donec ac orci vel metus dictum congue. Sed quis ante nec diam efficitur accumsan cursus vel nisi. Sed sit amet ex et sem venenatis porttitor ut sit amet turpis. Phasellus maximus est eu nulla dictum mattis. Morbi massa erat, sollicitudin commodo tortor nec, mollis commodo arcu. Integer ut erat ut leo sagittis euismod. Vivamus consectetur magna sed lacus sollicitudin volutpat. Integer ultricies, lorem eget pellentesque auctor, ligula metus molestie.
+        </p>
+        <br><br>
+        <a href="Pictures/Isep-Logo.jpg" download="logo" class="download">Download HTML file</a>
+        <a href="Pictures/Isep-Logo.jpg" download="logo" class="download">Download BibteX file</a>
+     </div>
+  </fieldset>
+  
+  
+  <br><br><br>
+  <fieldset class="publication_fieldset">
+    <legend class="publication_legend">Published by Adrien the 13th January 2017 :</legend>
+    <div class="control-group">
+     	<br>
+        <p class="publication_div">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut rhoncus leo leo, vel sagittis orci suscipit sed. Nunc eu ante vel leo posuere pretium. Praesent vitae neque nec nisi luctus consequat a sit amet ex. Quisque bibendum purus eget porttitor malesuada. Sed dictum nisl et laoreet feugiat. Fusce aliquam bibendum felis. Vivamus laoreet faucibus neque. Nulla facilisi. Integer consectetur nibh a orci laoreet mollis. Nam tortor dui, sollicitudin eget ullamcorper non, ornare egestas erat. Donec orci arcu, porta eu lobortis et, sagittis ut lorem. Nam commodo blandit ornare. Morbi auctor auctor purus nec varius.
+		</p><br><p class="publication_div">
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In a urna vel turpis tempor dapibus et eu tortor. Sed lacinia, purus dictum imperdiet rhoncus, nisl sem ornare libero, pharetra molestie ante nunc a nulla. Nam ut luctus dolor. Praesent vitae consequat dui, a porta ligula. Donec ac orci vel metus dictum congue. Sed quis ante nec diam efficitur accumsan cursus vel nisi. Sed sit amet ex et sem venenatis porttitor ut sit amet turpis. Phasellus maximus est eu nulla dictum mattis. Morbi massa erat, sollicitudin commodo tortor nec, mollis commodo arcu. Integer ut erat ut leo sagittis euismod. Vivamus consectetur magna sed lacus sollicitudin volutpat. Integer ultricies, lorem eget pellentesque auctor, ligula metus molestie.
+        </p>
+        <br><br>
+        <a href="Pictures/Isep-Logo.jpg" download="logo" class="download">Download HTML file</a>
+        <a href="Pictures/Isep-Logo.jpg" download="logo" class="download">Download BibteX file</a>
+    </div>
+  </fieldset>
+  
+  
+  <br><br><br>
+  <fieldset class="publication_fieldset">
+    <legend class="publication_legend">Published by Adrien the 13th January 2017 :</legend>
+    <div class="control-group">
+    	<br>
+        <p class="publication_div">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut rhoncus leo leo, vel sagittis orci suscipit sed. Nunc eu ante vel leo posuere pretium. Praesent vitae neque nec nisi luctus consequat a sit amet ex. Quisque bibendum purus eget porttitor malesuada. Sed dictum nisl et laoreet feugiat. Fusce aliquam bibendum felis. Vivamus laoreet faucibus neque. Nulla facilisi. Integer consectetur nibh a orci laoreet mollis. Nam tortor dui, sollicitudin eget ullamcorper non, ornare egestas erat. Donec orci arcu, porta eu lobortis et, sagittis ut lorem. Nam commodo blandit ornare. Morbi auctor auctor purus nec varius.
+		</p><br><p class="publication_div">
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In a urna vel turpis tempor dapibus et eu tortor. Sed lacinia, purus dictum imperdiet rhoncus, nisl sem ornare libero, pharetra molestie ante nunc a nulla. Nam ut luctus dolor. Praesent vitae consequat dui, a porta ligula. Donec ac orci vel metus dictum congue. Sed quis ante nec diam efficitur accumsan cursus vel nisi. Sed sit amet ex et sem venenatis porttitor ut sit amet turpis. Phasellus maximus est eu nulla dictum mattis. Morbi massa erat, sollicitudin commodo tortor nec, mollis commodo arcu. Integer ut erat ut leo sagittis euismod. Vivamus consectetur magna sed lacus sollicitudin volutpat. Integer ultricies, lorem eget pellentesque auctor, ligula metus molestie.
+        </p>
+        <br><br>
+        <a href="Pictures/Isep-Logo.jpg" download="logo" class="download">Download HTML file</a>
+        <a href="Pictures/Isep-Logo.jpg" download="logo" class="download">Download BibteX file</a>
+    </div>
+  </fieldset>
+  <br><br><br><br>
+
 </div>
+
+
 
 </body>
 </html>
