--- a/SignUp.html
+++ b/SignUp.html
@@ -8,12 +8,12 @@
   <link rel="stylesheet" href="Stylesheet.css" />
 </head>
 <body>
-<img src="Pictures/Isep-logo.jpg"/>
+<img src="Pictures/logo_ISEP.jpg"/>
 <br><br><br><br>
 <div class="container">
-  <h1 class="title">Sign up !</h2>
+  <h1 class="title">Sign up !</h1>
 
-  <fieldset><legend>Personal Information</legend>
+  <fieldset class="signin"><legend>Personal Information</legend>
     <br><label>Firstname :</label>
     <input type="text" class="champ" placeholder="Enter firstname" name="firstname"><br>
     <br><label>Lastname :</label>
@@ -31,7 +31,7 @@
     <br><label>City :</label>
     <input type="text" class="champ" placeholder="Enter city" name="city"><br>
     <br><label>Country :</label>
-    <select placeholder="Country" class="champ">
+    <select class="champ">
          <option value="france">France</option>
          <option value="spain">Spain</option>
          <option value="italy">Italy</option>
