--- a/publication.html
+++ b/publication.html
@@ -35,15 +35,56 @@
           <input type="search" class="input-sm" placeholder="Search">
           <button type="submit" class="btn btn-primary btn-sm"><span class="glyphicon glyphicon-eye-open"></span> Search</button>
         </li>
-
-  </li>
-</ul>
+       </li>
+     </ul>
   </div>
 
-
-
-  <p>Contenu Onglet</p>
-
+	<br><br>
+	<a class="btn btn-primary btn-sm ajout_submission" href="submission.html"> Write a new submission </a>
+    
+    <h2>In Progress Publications</h2>
+  <br><br>          
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>Author</th>
+        <th>Title</th>
+        <th>Action</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Felix Wlody</td>
+        <td>FIFA 2k17</td>
+        <td>
+	        <a href="add.html"><img src="Pictures/valider.png"></a>
+	        <a href="modify.html"><img src="Pictures/modifier.png"></a>
+	        <a href="delete.html"><img src="Pictures/supprimer.jpg"></a>
+        </td>
+      </tr>
+      <tr>
+        <td>Thomas Da Silva</td>
+        <td>B2OBA</td>
+        <td>
+	        <a href="add.html"><img src="Pictures/valider.png"></a>
+	        <a href="modify.html"><img src="Pictures/modifier.png"></a>
+	        <a href="delete.html"><img src="Pictures/supprimer.jpg"></a>
+		</td>
+      </tr>
+      <tr>
+        <td>Shubham Desai</td>
+        <td>Vive la France !</td>
+        <td>
+            <a href="add.html"><img src="Pictures/valider.png"></a>
+	        <a href="modify.html"><img src="Pictures/modifier.png"></a>
+	        <a href="delete.html"><img src="Pictures/supprimer.jpg"></a>
+		</td>
+      </tr>
+    </tbody>
+  </table>
+  <br><br><br>
+	    
+	
 
 
 
